<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleGravity="bottom"
            app:layout_scrollFlags="exitUntilCollapsed">

            <ImageView
                android:id="@+id/toolbar_image"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="60dp"
                android:scaleType="fitCenter"
                android:src="@drawable/gads3"
                app:layout_collapseMode="pin" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/submission_toolbar"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                app:layout_collapseMode="pin"
                app:titleTextColor="#D68206" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
<androidx.constraintlayout.widget.ConstraintLayout

    android:id="@+id/form_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".FormActivity">


    <EditText
        android:id="@+id/editText4"
        android:layout_width="339dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="Github link"
        android:background="#FFFFFF"
        android:textColorHint="#504F4F"
        android:contentDescription="GitHub Link"
        android:ems="10"
        android:inputType="text"
        android:labelFor="@id/editText4"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        tools:ignore="MissingConstraints"
        android:hint="@string/github" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="160dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="First Name"
        android:background="#FFFFFF"
        android:contentDescription="First Name"
        android:ems="10"
        android:hint="@string/first"
        android:inputType="textPersonName"
        android:labelFor="@id/editText"
        android:textColor="#000000"
        android:textColorHint="#504F4F"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="160dp"
                android:layout_height="46dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="59dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="Last Name"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:textColorHint="#504F4F"
                android:contentDescription="Last Name"
                android:ems="10"
                android:inputType="textPersonName"
                android:labelFor="@id/editText2"
                android:hint="@string/last"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editText"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="339dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="62dp"
        android:autofillHints="Email"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:textColorHint="#504F4F"
        android:contentDescription="@string/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:labelFor="@id/editText3"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="111dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="112dp"
                android:layout_marginBottom="35dp"
                android:background="#000000"
                android:labelFor="@id/textView"
                android:text="@string/Submission"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#D68206"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="42dp"
                android:background="#D68206"
                android:backgroundTint="#D68206"
                android:contentDescription="Submit Button"
                android:text="@string/Submit_btn"
                android:clickable="true"
                android:focusable="true"
                android:onClick="submitDetails"
                android:textColor="@color/whiteColor"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText4" />

            <View
                android:id="@+id/divider"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="1dp"
                android:background="#D68206"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

